# rag-relatorios

./: .gitignore  README.md  agente.py  audio2text.py  instructions.py  main.py  pyproject.toml
prompts/: prompt_relatorio.txt
