[project]
name = "rag-relatorios"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.5.17",
    "chonkie[semantic]>=1.6.2",
    "lancedb>=0.30.2",
    "numpy>=2.4.4",
    "openai>=2.32.0",
    "pypdf>=6.10.2",
    "sqlalchemy>=2.0.49",
]
